trying to fix collection-see-all from overflowing on mobile #2

--- a/css/sass/media_queries/_media_queries.scss
+++ b/css/sass/media_queries/_media_queries.scss
@@ -83,8 +83,9 @@
         padding-bottom: 20px !important;
     }
     .content {
-        margin: 20px 20px 0;
-        padding: 0;
+        padding: 20px 20px 0;
+        margin: 0;
+        width: 100%;
     }
     .col {
         display: block;
